src/App.css
.App {
  width: 100%;
  height: 100vh;
  background-color: #5f632d;
  font-family: 'Lato', sans-serif;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.github-logo-container {
  width: 100%;
  margin: 4px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  bottom: 0;
}

.github-logo {
  height: 50px;
  cursor: pointer;
}

.rotate-diagonal:hover {
  animation: rotate-diagonal-1 0.5s linear both;
}

@keyframes rotate-diagonal-1 {
  0% {
    transform: rotate3d(1, 1, 0, 0deg);
  }

  50% {
    transform: rotate3d(1, 1, 0, -180deg);
  }

  100% {
    transform: rotate3d(1, 1, 0, -360deg);
  }
}

.calculator-container {
  min-width: 400px;
  min-height: 600px;
  padding: 14px;
  background-color: #717273;
  border-radius: 20px;
  border: 5px solid #000000;
}

.row {
  margin: 4px;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media only screen and (max-width: 768px) {
  .calculator-container {
    min-width: 300px;
  }
}

